# statdesign

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: api.md  calculators.md  changelog.md  cli.md  contributing.md  index.md  install.md  math.md  quickstart.md  usage.md
docs/docs/: IMPLEMENTATION_SUMMARY.md  README_graph_features.md
docs/parity/: README.md  anova.md  means.md  one_sample_means.md  paired_means.md  survival.md  t_means.csv  two_proportions.md
examples/: README.md  alpha_adjust_example.json  one_prop_equivalence.json  two_mean_equivalence.json  two_mean_example.json  two_prop_equivalence.json  two_prop_example.json  two_prop_noninferiority.json
notebooks/: ml_pipeline_demo.py
schemas/cli/v1/: cli-schema.json
scripts/: check_ci.py  generate_parity_tables.py  release.py  update_parity_data.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/calculators/: index.html  two_means.html  two_proportions.html
site/changelog/: index.html
site/cli/: index.html
site/contributing/: index.html
site/docs/IMPLEMENTATION_SUMMARY/: index.html
site/docs/README_graph_features/: index.html
site/install/: index.html
site/math/: index.html
site/parity/: index.html  r_pwr_two_means.csv  r_pwr_two_prop.csv
site/parity/anova/: index.html
site/parity/means/: index.html
site/parity/one_sample_means/: index.html
site/parity/paired_means/: index.html
site/parity/survival/: index.html
site/parity/two_proportions/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/usage/: index.html
src/src/: __init__.py
src/src/api/: app.py
src/src/db/: build_db.py  ingest_evidence.py
src/src/graph_features/: example_graph_features.py  graph_features.py
src/src/gwas/: qc.py  ridge_gwas.py
src/src/mr/: harmonize.py  run_mr.py
src/src/sv/: assoc_cnv.py  assoc_repeats.py
src/src/twas/: assoc_twas.py  predict_expr.py
src/src/ui/: dashboard.py
src/src/utils/: generate_data.py  io.py  stats.py  viz.py
src/statdesign/: __init__.py  __main__.py  _scipy_backend.py  api.py  cli.py  multiplicity.py  validation.py  visualization.py
src/statdesign.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/statdesign/core/: accrual.py  alloc.py  ncf.py  normal.py  survival_math.py
src/statdesign/endpoints/: anova.py  means.py  proportions.py  survival.py
statdesign/: LICENSE  Makefile  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
statdesign/docs/: usage.md
statdesign/src/statdesign/: __init__.py  api.py  cli.py  effects.py  power.py
statdesign/tests/: test_cli.py  test_power_basic.py
tests/: test_alloc.py  test_anova.py  test_api_coverage.py  test_benchmarks.py  test_cli.py  test_cli_alpha_adjust_table.txt  test_cli_entrypoint.py  test_coverage_boost.py  test_design_effects.py  test_edge_cases.py  test_error_handling.py  test_exact_fallback.py  test_means.py  test_means_comprehensive.py  test_multiplicity.py  test_ncf_guards.py  test_parity_numbers.py  test_properties.py  test_proportions.py  test_proportions_comprehensive.py  test_proportions_parity.py  test_scipy_backend.py  test_scipy_paths.py  test_survival.py  test_validation_messages.py
tests/archived/tests/: test_graph_features.py  test_harmonize.py  test_ingest.py  test_stats.py
tests/golden/: anova_golden.csv  means_two_sample_golden.csv  one_sample_mean_golden.csv  one_sample_prop_golden.csv  paired_mean_golden.csv  survival_convertN_golden.csv  survival_events_golden.csv  two_prop_exact_golden.csv  two_prop_normal_golden.csv
tests/test_cli/: test_cli_alpha_adjust_table.txt  test_cli_two_prop_json.yml
