[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "statdesign"
version = "0.3.0"
description = "Deterministic power and sample size calculations with CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Altalanta" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.20",
    "scipy>=1.8",
    "pandas>=1.3",
]
keywords = ["statistics", "power", "sample size", "design", "cli"]

[project.optional-dependencies]
docs = ["mkdocs>=1.4", "mkdocs-material>=9.0"]
tests = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.3", "mypy>=1.4"]

[project.scripts]
statdesign = "statdesign.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
filterwarnings = ["ignore::RuntimeWarning"]
markers = ["slow: parity comparisons"]

[tool.mypy]
python_version = "3.9"
packages = ["statdesign"]
strict = true
mypy_path = "src"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["statdesign"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
